<resources>
    <string name="app_name">RepTrack</string>
    <string name="tfe_ic_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="tfe_ic_gpu_quant_error" translation_description="Error regarding GPU support for Quant models[CHAR_LIMIT=60]">GPU does not yet supported quantized models.</string>
    <string name="tfe_ic_model" translatable="false">Model:</string>
    <string-array name="tfe_ic_models" translatable="false">
        <item>Quantized_EfficientNet</item>
        <item>Float_EfficientNet</item>
        <item>Quantized_MobileNet</item>
        <item>Float_MobileNet</item>
    </string-array>

    <string name="tfe_ic_device" translatable="false">Device:</string>
    <string-array name="tfe_ic_devices" translatable="false">
        <item>CPU</item>
        <!-- TODO: Add GPU  -->
        <item>GPU</item>
    </string-array>
    <string name="home">Home</string>
    <string name="scan">Scan</string>
    <string name="track">Track</string>
    <string name="progress">Progress</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_date">Date</string>
    <string name="add_time">Time</string>
    <string name="add_exercise">Exercise</string>
    <string name="add_set">Sets</string>
    <string name="add_rep">Reps</string>
    <string name="add_weight">Weight (kg)</string>
    <string name="edit_date">Date of Entry</string>
    <string name="edit_time">Time of Entry</string>
    <string name="edit_set">New Sets</string>
    <string name="edit_rep">New Reps</string>
    <string name="edit_weight">New Weight (kg)</string>
    <string name="cancel">Cancel</string>
    <string name="title_home">Home</string>
    <string name="title_chart">Progress</string>
    <string name="title_tracker">Tracker</string>
    <string name="title_camera">Camera</string>
    <string name="title_equipment">Equipment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tracker_tab">TrackerTabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string-array name="filterTracker">
        <item>No Filter</item>
        <item>Current Month</item>
        <item>Current Year</item>
    </string-array>
    <string name="lvtracker_date">Date</string>
    <string name="lvtracker_time">Date</string>
    <string name="lvtracker_target">Target Hit?</string>
    <string name="lvtracker_equipment">Equipment</string>
    <string name="lvtracker_metric1">Metric 1</string>
    <string name="lvtracker_metric2">Metric 2</string>
    <string name="lvtracker_metric3">Metric 3</string>

</resources>
