<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAddDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <DatePicker
                    android:id="@+id/dpAddDate"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAddExercise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_exercise"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <Spinner
                    android:id="@+id/spinnerAddExercise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutMetrics"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAddMetric1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_set"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <EditText
                    android:id="@+id/etAddMetric1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/tvAddMetric2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_rep"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <EditText
                    android:id="@+id/etAddMetric2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/tvAddMetric3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_weight"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <EditText
                    android:id="@+id/etAddMetric3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>




</LinearLayout>