<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackerSubFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinnerTrack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/filterTracker"
            android:minHeight="48dp" />

        <ListView
            android:id="@+id/lvTrack"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonTrackDelete"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_light"
                android:text="@string/delete"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonTrackEdit"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_light"
                android:text="@string/edit"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonTrackAdd"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_light"
                android:text="@string/add"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>