<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/edit_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <DatePicker
                    android:id="@+id/edit_dp_LP_Date"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/edit_time"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TimePicker
                    android:id="@+id/edit_tp_LP_Time"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:calendarViewShown="false"
                    android:timePickerMode="spinner" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_set"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/edit_et_LP_Sets"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="number"
                            android:minHeight="48dp"
                            tools:ignore="SpeakableTextPresentCheck" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_rep"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/edit_et_LP_Reps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="number"
                            android:minHeight="48dp"
                            tools:ignore="SpeakableTextPresentCheck" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_weight"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/edit_et_LP_Weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="number"
                            android:minHeight="48dp"
                            tools:ignore="SpeakableTextPresentCheck" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>